(executable
  (name tlapm)
  (public_name tlapm)
  (modules (:standard setup_paths))
  (libraries unix str dune-site)
  (foreign_stubs (language c) (names sysconf_stubs)))

(ocamllex alexer)

(generate_sites_module
 (module setup_paths)
 (sites tlapm))

(dirs (:standard \ dune_site_mock)) ; To avoid including the mocked Setup_paths module.

(include_subdirs unqualified)

(env
  (dev
    (flags (:standard -w +a-4-7-9-27-29-30-32..42-44-45-48-50-52-60-66..70))))

