(executable
 (name main)
 (public_name translate)
 (modules_without_implementation fotypes))

(install ; It has to be installed under 2 names for some reason.
 (section bin)
 (files (main.exe as ptl_to_trp)))

(ocamllex folex)
(ocamlyacc foyacc)

(env
  (dev
    (flags (:standard -w +a-4-7-9-21-26-27-29-30-32..42-44-45-48-50-52-60-66..70))))
