(library
 (name tlapm_lsp_lib)
 (optional) ; Only build, if eio is available, which is only the case for ocaml > 5.
 (enabled_if
  (>= %{ocaml_version}, "5.0.0"))
 (libraries tlapm_lib lsp eio_main dune-build-info re2)
 (inline_tests
  (deps "../test/tlapm_mock.sh" "../../src/tlapm.exe")
  ; (flags -only-test docs/proof_step.ml -verbose)
  )
 (preprocess
  (pps ppx_inline_test ppx_deriving.show)))

(include_subdirs qualified)
